2004-11-24 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocEntryArchive.[h|cxx] : bug fix and add a method to temporary
     remove a DocEntry in the header (push an empty DocEntry)
   * src/gdcmFile.[h|cxx] : remove some useless variables, methods and code
     lines. Bug fix in the initialization of the PixelConvert and the 
     DocEntryArchive
   * src/gdcmElementSet.[h|cxx] : add methods Initialize and GetNext to
     use in TestCopyDicom (now this test can run under windows... but fails)
   * Test/TestCopyDicom.cxx : amelioration of the test :
     - test the pixels written
     - add test points to quickly find where is the error
     - can set a file name input and output in arguments
   * Test/TestAllReadCompareDicom.cxx, TestReadWriteReadCompare.cxx : 
     amelioration of the test output

2004-11-23 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocEntryArchive.cxx : complete the print function, that prints
     all replaced DocEntry's
   * src/gdcmFile.[h|cxx] : remove all changes of the header when getting datas.
     Now, each needed DocEntry to modify is duplicated, modified and inserted
     to the header using DocEntryArchive. Thus, after save, we can restore the
     header initial state.

2004-11-22 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFile.h : fix compilation errors on zorglub linuc computer

2004-11-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocEntry.cxx : remove the copy of the DictEntry... there isn't
     correct to copy it. The DictEntry is specified at the DocEntry creation,
     then, it musn't change in the time.
   * src/gdcmDocEntryArchive.[h|cxx] : new class. It's goal is to change the
     header correctly. At this time, the change is only made for the first
     level of the Document. In the future, it might consider sequences.
     The change is made by replacing a DocEntry by an other that is created