@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmDocument.h,v $
   Language:  C++
-  Date:      $Date: 2004/11/17 19:49:13 $
-  Version:   $Revision: 1.61 $
+  Date:      $Date: 2004/11/24 11:17:47 $
+  Version:   $Revision: 1.62 $
  
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -277,9 +277,6 @@ public:
    /// 'Swap code' accessor (see \ref SwapCode )
    int GetSwapCode() { return SwapCode; }
    
-   /// File pointer
-   std::ifstream * GetFP() { return Fp; }
-
    bool operator<(Document &document);
 
 };
